Correct positioning of all elements, change gap
A div was created inside the text-div, where the messages are shown, to place the restart button and center it. Gap was reduced to accommodate the elements without scrolling.

--- a/style.css
+++ b/style.css
@@ -29,11 +29,10 @@ img {
 }   
 
 .button-container {
-    height: 10%;
+    height: 70px;
+    margin-top: 10px;
     display: flex;
-    width: 100vw;
     justify-content: center;
-    
     p {
         font-size: 32px;
         background-color: gray;
@@ -53,22 +52,19 @@ img {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 100vh;
-    gap: 62px;
+    gap: 26px;
 }
 
 .play-button{
     width: 180px;
-    height: 50px;
+    height: 55px;
     border-radius: 18px;
     cursor: pointer;
     font-size: large;
 }
 
 
-
 .text-div {
-    height: 15%;
     font-size: 32px;
     p {
         font-weight: 700;
@@ -80,4 +76,9 @@ img {
 .rounds-text {
     color: blue;
     border-right: 1px solid black;
+}
+
+.restart-button-div {
+    display: flex;
+    justify-content: center;
 }
